Fixed Custom Domain Auth
Authentication now works fully with the site hosted on a custom domain (charya.me).

Also, that profile picture was way too big. It's 25x25 now.

--- a/src/layout/Layout.css
+++ b/src/layout/Layout.css
@@ -51,8 +51,8 @@
     position: relative;
     top: 50%;
     transform: translate(0, -50%);
-    height: 32px;
-    width: 32px;
+    height: 25px;
+    width: 25px;
     border-radius: 50%;
 }
 
